added oled display

--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,11 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+
+
+.fseventsd
+.Trash-1000
+.Trashes
+._.Trashes
+.Spotlight-V100
+mpsp_data
