--- a/mpsp/config.json
+++ b/mpsp/config.json
@@ -7,8 +7,8 @@
     {
       "klass": "DHT22",
       "data_pin": "Y4",
-      "enabled": false,
-      "period": 10000
+      "enabled": true,
+      "period": 1000
     },
     {
       "klass": "DS18X20",
